# StarTeller-CLI

./: .gitignore  NOTICE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml  tests.yml
src/: __init__.py  catalog_manager.py  star_teller.py  starteller.py  starteller_cli.py
tests/: __init__.py  regenerate_fixtures.py  test_star_teller.py  test_starteller_cli.py
tests/fixtures/: -34_151_0.csv  -34_151_20.csv  0_0_0.csv  0_0_20.csv  40_-74_0.csv  40_-74_20.csv  80_-40_0.csv  80_-40_20.csv  truth3.csv
