[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starteller-cli"
version = "1.0.0"
description = "A comprehensive command-line tool for astrophotographers to find optimal viewing times for deep sky objects"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Connor Rauscher"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "skyfield>=1.46",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "pytz>=2022.1",
    "timezonefinder>=6.0.0",
    "tqdm>=4.60.0",
]

[project.scripts]
starteller = "src.starteller_cli:main"

[project.urls]
Homepage = "https://github.com/ConnRaus/StarTeller-CLI"
Repository = "https://github.com/ConnRaus/StarTeller-CLI"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"] 